# python-basics

./: requirements-dev.txt  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: __init__.py  alembic.ini  common.py  config.py  docker-compose.yml  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  requirements.txt
homework_04/hw04_alembic/: env.py
homework_04/hw04_alembic/versions/: 2024_04_25_1443-80e7e4c90ab9_create_table_user.py  2024_04_25_1500-1c3bd5461c48_create_table_post.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: docker-compose.yml  pyproject.toml  requirements.txt
homework_06/app/: main.py
homework_06/app/templates/: index.html
homework_06/app/views/: items.py
homework_06/app/views/products/: crud.py
testing/test_homework_02/: test_base.py  test_car.py
testing/test_homework_03/: test_app.py
