[tool.poetry]
name = "homework-04"
version = "0.1.0"
description = ""
authors = ["Vladislav Kozlov <vlad.kv.2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
aiohttp = "^3.9.3"
alembic = "^1.13.1"
psycopg = {extras = ["binary", "pool"], version = "^3.1.18"}
black = "^24.4.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
