[tool.poetry]
name = "homework-06"
version = "0.1.0"
description = ""
authors = ["Vladislav Kozlov <vlad.kv.2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
psycopg = "^3.1.19"
alembic = "^1.13.1"
sqlalchemy = {extras = ["postgresql-psycopg"], version = "^2.0.30"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
